# monke-army

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.MD  SECURITY.md  TODO.md  addressbook.md  claude.md  frontend-dev.md  frontend-fix.md  package-lock.json  package.json  pegged.md  refactor.md  vercel.json  whitepaper.md
bot/: anchor-harvest-bot.env.example  anchor-harvest-bot.ts  bot.test.ts  ecosystem.config.cjs  find-pool-and-verify.mjs  geyser-subscriber.ts  harvest-executor.ts  keeper.ts  logger.ts  meteora-accounts.ts  relay-server.ts  retry.ts  tsconfig.json  verify-active-id-offset.mjs
bot/idl/: bin_farm.json  monke_bananas.json
deploy/nginx/: bot.monke.army.conf
programs/bin-farm/: Cargo.toml
programs/bin-farm/src/: lib.rs  meteora_dlmm_cpi.rs
programs/monke-bananas/: Cargo.toml
programs/monke-bananas/src/: lib.rs
public/: app.js  config.example.json  config.json  index.html  styles.css
ref/: beauty.html
scripts/: build-frontend.mjs  check-escrows.mjs  check-vault.mjs  deploy-and-init.mjs  deploy.sh  e2e-test.ts  estimate-price.mjs  fee-dashboard.ts  generate-clients.mjs  process-shim.mjs  read-pool.mjs  recycle-fee-rover.ts  setup-droplet.sh  test-close-position.ts
src/: enlist.js
src/contracts/: meteora_dlmm_cpi.rs  monke_bananas.rs
src/hooks/: useWallet.js
src/sdk/: meteora.js
src/utils/: bins.js  transaction.js
